# sciagent

./: .dockerignore  .gitignore  Dockerfile  README.md  one-page-example.md  pyproject.toml  railway.toml  sciagent.code-workspace  setup.py
.github/: copilot-instructions.md
.github/workflows/: build-plugin.yml  publish-plugin.yml  sync-claude-agents.yml
docs/: api-usage.md  architecture.md  changelog-routing-table-rewrite.md  copilot-agents.md  getting-started-copilot.md  getting-started-fullstack.md  getting-started-markdown.md  getting-started-plugin.md  installation.md  showcase.md
docs/domains/: README.md  manifest.yaml
docs/domains/computational-neuro/: README.md  library-api.md  operations.md  skills.md  tools.md  workflows.md
docs/domains/extracellular-ephys/: README.md
docs/domains/intracellular-ephys/: README.md
docs/examples/: README.md  analysis-planner-example.md  configure-domain-example.md  configure_domain_out.md  data-qc-example.md  rigor-review-example.md
examples/csv_analyst/: README.md  __init__.py  __main__.py  agent.py  config.py
scripts/: __init__.py  build_plugin.py  convert_to_agents.py  install_templates.py  link_prompts.py  sync_claude_agents.py
src/sciagent/: __init__.py  __main__.py  base_agent.py  cli.py  config.py  plugins.py
src/sciagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sciagent/agents/: __init__.py  code_reviewer.py  converter.py  data_qc.py  docs_ingestor.py  domain_assembler.py  planner.py  report_writer.py  rigor_reviewer.py
src/sciagent/data/: __init__.py  resolver.py
src/sciagent/guardrails/: __init__.py  bounds.py  scanner.py  validator.py
src/sciagent/mcp/: __init__.py  server.py
src/sciagent/prompts/: __init__.py  base_messages.py  code_execution.md  markdown.py  scientific_rigor.md
src/sciagent/tools/: __init__.py  context.py  (+9 more)
src/sciagent_wizard/: __init__.py  agent.py  auth.py  models.py  prompts.py  public.py  rendering.py  tools.py
templates/: AGENTS.md  README.md  builtin_agents.md  library_api.md  operations.md  skills.md  tools.md  workflows.md
templates/agents/: README.md
tests/: test_build_plugin.py  test_discovery.py  test_doc_fetcher.py  test_live_apis.py  test_papers_with_code.py  test_scicrunch.py
(+95 files in other folders)
