[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciagent"
version = "0.2.0"
description = "A framework for building rigorous, human-in-the-loop scientific coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sam"}
]
keywords = [
    "science",
    "agent",
    "analysis",
    "copilot",
    "framework",
    "coding-agent",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "Pillow>=9.0",
    "github-copilot-sdk",  # GitHub Copilot SDK
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
cli = [
    "typer[all]>=0.9",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]
web = [
    "quart>=0.19",
    "quart-cors>=0.7",
]
wizard = [
    "sciagent[cli,web]",
    "httpx>=0.25",
]
all = [
    "sciagent[cli,web,wizard]",
]

[project.scripts]
sciagent = "sciagent.cli:app"
sciagent-web = "sciagent.web.app:main"
sciagent-wizard = "sciagent_wizard:main"
sciagent-public = "sciagent_wizard:main_public"

[project.urls]
Homepage = "https://github.com/smestern/sciagent"
Repository = "https://github.com/smestern/sciagent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sciagent_wizard.templates" = ["*.md"]
"sciagent_wizard.templates_html" = ["*.html"]
"sciagent_wizard.static.js" = ["*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit real external APIs (deselect with: -m 'not live')",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
